--- a/mysite/templates/pybo/question_detail.html
+++ b/mysite/templates/pybo/question_detail.html
@@ -46,8 +46,14 @@
         </div>
     </div>
     <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5>
-    {% for answer in question.answer_set.all %}
-    <div class="card my-3">
+    {% for answer in question.answer_set.all %}<div class="row my-3">
+    <div class="col-1">  <!-- 추천영역 -->
+        <div class="bg-light text-center p-3 border font-weight-bolder mb-1">{{answer.voter.count}}</div>
+        <a href="#" data-uri="{% url 'pybo:vote_answer' answer.id  %}"
+            class="recommend btn btn-sm btn-secondary btn-block my-1">추천</a>
+    </div>
+    <div class="col-11">  <!-- 답변영역 -->
+            <div class="card">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
             <div class="d-flex justify-content-end">
@@ -71,6 +77,9 @@
                 </div>
             {% endif %}
         </div>
+    </div>
+
+    </div>
     </div>
     {% endfor %}
     <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
