--- a/mysite/templates/pybo/question_detail.html
+++ b/mysite/templates/pybo/question_detail.html
@@ -46,8 +46,8 @@
     </div>
         </div>
     </div>
-    <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5>
-    {% for answer in question.answer_set.all %}<div class="row my-3">
+    <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다. {{ answer_list.number }}/{{ answer_list.paginator.num_pages }}페이지</h5>
+    {% for answer in answer_list %}<div class="row my-3">
     <a name="answer_{{ answer.id }}"></a>
     <div class="col-1">  <!-- 추천영역 -->
         <div class="bg-light text-center p-3 border font-weight-bolder mb-1">{{answer.voter.count}}</div>
@@ -91,11 +91,58 @@
         </div>
         <input type="submit" value="답변등록" class="btn btn-primary">
     </form>
+    <!-- 페이징처리 시작 -->
+    <ul class="pagination justify-content-center">
+        <!-- 이전페이지 -->
+        {% if answer_list.has_previous %}
+        <li class="page-item">
+            <a class="page-link" data-page="{{ answer_list.previous_page_number }}" href="#">이전</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+        </li>
+        {% endif %}
+        <!-- 페이지리스트 -->
+        {% for page_number in answer_list.paginator.page_range %}
+            {% if page_number >= answer_list.number|add:-5 and page_number <= answer_list.number|add:5 %}
+            {% if page_number == answer_list.number %}
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" data-page="{{ page_number }}" href="#">{{ page_number }}</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" data-page="{{ page_number }}" href="#">{{ page_number }}</a>
+            </li>
+            {% endif %}
+            {% endif %}
+        {% endfor %}
+        <!-- 다음페이지 -->
+        {% if answer_list.has_next %}
+        <li class="page-item">
+            <a class="page-link" data-page="{{ answer_list.next_page_number }}" href="#">다음</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+        </li>
+        {% endif %}
+    </ul>
+    <!-- 페이징처리 끝 -->
+
+<form id="searchForm" method="get" action="{% url 'pybo:detail' question.id %}">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+</form>
 </div>
 {% endblock %}
 {% block script %}
 <script type='text/javascript'>
 $(document).ready(function(){
+    $(".page-link").on('click', function() {
+            $("#page").val($(this).data("page"));
+            $("#searchForm").submit();
+        });
+
     $(".delete").on('click', function() {
         if(confirm("정말로 삭제하시겠습니까?")) {
             location.href = $(this).data('uri');
